--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       .navigation, .pitch, .section1, .section2, .faq, .footer {
       padding: 10px 0px 10px 0px; 
       }
-      .video, .thermeter, .order, .social{
+      .video, .thermometer, .order, .social{
       border: 1px dotted;
       text-align:center;
       }
@@ -27,7 +27,7 @@
       height: 124px
       line-height: 124px;
       }
-      .thermeter, .order, .social{
+      .thermometer, .order, .social{
       /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
       height: 40px
       line-height: 40px 
@@ -46,9 +46,9 @@
 	<div class = "span6 blank">
 	  blank
 	</div>
+
 	<div class = "span4 about">
 	  about
-	</div>
       </div>
     </div>
     <div class = "row heading">
@@ -69,6 +69,9 @@
 	<div class = "thermometer">
 	  thermometer
 	</div>
+  <div class = "order">
+  order
+  </div>
 	<div class = "social">
 	  social
 	</div>
