--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset = "utf-8">
     <tittle>Kickoff</tittle>
     <link type = "text/css" rel = "stylsheet" 
-         href = "https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.com">
+         href = "https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type = "text/css">
       body {
       padding-top: 20px;
