--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset = "utf-8">
     <tittle>Kickoff</tittle>
-    <link type = "text/css" rel = "stylsheet" 
+    <link type = "text/css" rel = "stylesheet" 
          href = "https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
     <style type = "text/css">
       body {
