--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ ga('send', 'pageview');
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-45140674-1', 'http://mighty-earth-9106.herokuapp.com');
+  ga('create', 'UA-45140674-1', 'mighty-earth-9106.herokuapp.com');
   ga('send', 'pageview');
 
 </script>
