--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-XXXX-Y');
+ga('create', 'UA-45140674-1');
 ga('send', 'pageview');
 
 </script>
