--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="ff0e60e5ac96f9c79ffd23df4f7f5b60" href="https://coinbase.com/checkouts/ff0e60e5ac96f9c79ffd23df4f7f5b60">Pre-ordena con Bitcoins!</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
             <!-- AddThis Button BEGIN -->
@@ -211,7 +211,7 @@
             <a class="addthis_button_compact"></a>
             <a class="addthis_counter addthis_bubble_style"></a>
           </div>
-          <a class="coinbase-button" data-code="ff0e60e5ac96f9c79ffd23df4f7f5b60" href="https://coinbase.com/checkouts/ff0e60e5ac96f9c79ffd23df4f7f5b60">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+
           <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
           <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-526b2567693ad448"></script>
           <!-- AddThis Button END -->
