boton de bicoin modificado

--- a/index.html
+++ b/index.html
@@ -201,7 +201,9 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <a class="coinbase-button" data-code="ff0e60e5ac96f9c79ffd23df4f7f5b60" href="https://coinbase.com/checkouts/ff0e60e5ac96f9c79ffd23df4f7f5b60">Pre-ordena con Bitcoins!</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+            <a class="coinbase-button" 
+             data-button-text="Pre-ordena con bitcoins!"     
+            data-code="7564fec56b0e342a402e94fa9b42cb3f" href="https://coinbase.com/checkouts/7564fec56b0e342a402e94fa9b42cb3f">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           <div class="span8 offset2 social">
             <!-- AddThis Button BEGIN -->
